crates/check_cli/tests/snapshots/main_commands_ci/ci_runs_linter_not_formatter_issue_3495.snap
---
source: crates/check_cli/tests/snap_test.rs
expression: redactor(content)
---
## `check.json`

```json
{
  "formatter": {
    "enabled": false
  }
}
```

## `file.js`

```js
let a = !b || !c
```

# Emitted Messages

```block
file.js:1:1 lint/style/useConst  FIXABLE  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  ! This let declares a variable that is only assigned once.
  
  > 1 │ let a = !b || !c
      │ ^^^
  
  i 'a' is never reassigned.
  
  > 1 │ let a = !b || !c
      │     ^
  
  i Safe fix: Use const instead.
  
  - let·a·=·!b·||·!c
  + const·a·=·!b·||·!c
  

```

```block
file.js:1:5 lint/correctness/noUnusedVariables  FIXABLE  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  ! This variable a is unused.
  
  > 1 │ let a = !b || !c
      │     ^
  
  i Unused variables are often the result of an incomplete refactoring, typos, or other sources of bugs.
  
  i Unsafe fix: If this is intentional, prepend a with an underscore.
  
  - let·a·=·!b·||·!c
  + let·_a·=·!b·||·!c
  

```

```block
Checked 1 file in <TIME>. No fixes applied.
Found 2 warnings.
```
