crates/check_cli/tests/snapshots/main_commands_ci/correctly_handles_ignored_and_not_ignored_files.snap
---
source: crates/check_cli/tests/snap_test.rs
expression: redactor(content)
---
## `check.json`

```json
{
  "linter": {
    "includes": ["**", "!/linter-ignored/**"]
  },
  "formatter": {
    "includes": ["**", "!/formatter-ignored/**"]
  },
  "files": {
    "includes": ["**", "!/globally-ignored/**"]
  }
}
```

## `/formatter-ignored/test.js`

```js
statement(    ) ; let a = !b || !c;
```

## `/globally-ignored/test.js`

```js
statement(    ) ; let a = !b || !c;
```

## `/linter-ignored/test.js`

```js
let a = !b || !c
```

# Termination Message

```block
ci ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Some errors were emitted while running checks.
  


```

# Emitted Messages

```block
/formatter-ignored/test.js:1:19 lint/style/useConst  FIXABLE  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  ! This let declares a variable that is only assigned once.
  
  > 1 │ statement(    ) ; let a = !b || !c;
      │                   ^^^
  
  i 'a' is never reassigned.
  
  > 1 │ statement(    ) ; let a = !b || !c;
      │                       ^
  
  i Safe fix: Use const instead.
  
  - statement(····)·;·let·a·=·!b·||·!c;
  + statement(····)·;·const·a·=·!b·||·!c;
  

```

```block
/formatter-ignored/test.js:1:23 lint/correctness/noUnusedVariables  FIXABLE  ━━━━━━━━━━━━━━━━━━━━━━━

  ! This variable a is unused.
  
  > 1 │ statement(    ) ; let a = !b || !c;
      │                       ^
  
  i Unused variables are often the result of an incomplete refactoring, typos, or other sources of bugs.
  
  i Unsafe fix: If this is intentional, prepend a with an underscore.
  
  - statement(····)·;·let·a·=·!b·||·!c;
  + statement(····)·;·let·_a·=·!b·||·!c;
  

```

```block
/linter-ignored/test.js format ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × File content differs from formatting output
  
    1   │ - let·a·=·!b·||·!c
      1 │ + let·a·=·!b·||·!c;
      2 │ + 
  

```

```block
Checked 2 files in <TIME>. No fixes applied.
Found 1 error.
Found 2 warnings.
```
