crates/check_cli/tests/snapshots/main_commands_ci/file_too_large_config_limit.snap
---
source: crates/check_cli/tests/snap_test.rs
expression: redactor(content)
---
## `check.json`

```json
{
  "files": {
    "maxSize": 16
  }
}
```

## `ci.js`

```js
statement1();
statement2();
```

# Termination Message

```block
ci ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × No files were processed in the specified paths.
  
  i Check your check.json or check.jsonc to ensure the paths are not ignored by the configuration.
  
  i These paths were provided but ignored:
  
  - ci.js
  


```

# Emitted Messages

```block
ci.js ci ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  i The size of the file is 27 B, which exceeds the configured maximum of 16 B for this project.
    Use the `files.maxSize` configuration to change the maximum size of files processed, or `files.includes` to ignore the file.
  

```

```block
Checked 0 files in <TIME>. No fixes applied.
```
