crates/check_cli/tests/snapshots/main_commands_ci/files_max_size_parse_error.snap
---
source: crates/check_cli/tests/snap_test.rs
expression: content
---
## `ci.js`

```js
statement1();
statement2();
```

# Termination Message

```block
flags/invalid ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Failed to parse CLI arguments.
    
    Caused by:
      couldn't parse `-1`: invalid digit found in string
  


```


