crates/check_cli/tests/snapshots/main_commands_ci/max_diagnostics_default.snap
---
source: crates/check_cli/tests/snap_test.rs
expression: content
---
# Termination Message

```block
ci ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Some errors were emitted while running checks.
  


```

# Emitted Messages

```block
Checked 60 files in <TIME>. No fixes applied.
Found 60 errors.
```
